# mazesolver

./: .gitignore  CMakeLists.txt  README.md
cppsrc/: CMakeLists.txt  cmd_input.cpp  cmd_input.hpp  demo_utils.cpp  demo_utils.hpp  main.cpp  wheeltask.cpp
cppsrc/generator/: CMakeLists.txt  compare_pairs.hpp  generator2d.cpp  generator2d.hpp  maze2d.cpp  maze2d.hpp  tokenize.hpp
cppsrc/solvers/: CMakeLists.txt  astar.hpp  bfs.hpp  dfs.hpp  heuristics.hpp  node.hpp  solution_path.hpp
mazes/: README.md
solutions/: README.md
